# FWH

./: .gitignore  CMakeLists.txt  FWH  fft.py  psd_azavg.py  psd_binavg.py  sample_input
include/: F1A_solver.h  Reader.h  err.h  global.h  ndarray.h  param_reader.h  utils.h
src/: F1A_solver.cpp  FWH.cpp  Reader.cpp  global.cpp  utils.cpp
